We don't need any export validation on the build platform when cross-compiling
Change-Id: I3e5c92c2824f1b6503e85cff775424b48c3c38d0

--- a/configure.ac
+++ b/configure.ac
@@ -4631,6 +4631,7 @@ if test "$cross_compiling" = "yes"; then
         --with-parallelism="$with_parallelism" \
         --without-doxygen \
         --without-java \
+        --without-export-validation \
         $sub_conf_opts \
         --srcdir=$srcdir \
         2>&1 | sed -e 's/^/    /'
