No export validation for the host platform when cross-compiling please
Sure, would make more sense to hardcode this in configure.ac. But
actually I guess that export validation will be turned off by default
anyway soon.

Change-Id: Icf266a0f389b9ebc8a28ee2e5f277449875ca885

--- a/distro-configs/LibreOfficeAndroid.conf
+++ b/distro-configs/LibreOfficeAndroid.conf
@@ -5,5 +5,6 @@
 --disable-gstreamer-1-0
 --disable-randr
 --disable-systray
---without-junit
+--without-export-validation
 --without-helppack-integration
+--without-junit
