--- a/distro-configs/LibreOfficeAndroidAarch64.conf
+++ b/distro-configs/LibreOfficeAndroidAarch64.conf
@@ -5,5 +5,6 @@
 --disable-gstreamer-1-0
 --disable-randr
 --disable-systray
---without-junit
+--without-export-validation
 --without-helppack-integration
+--without-junit
