GSoC notebookbar: container with context support
+ added sfxlo-ContextVBox
+ notebookbar's .ui file must contain control
  implementing NotebookbarContextControl interface
  with id "ContextContainer"

Change-Id: Ice81e23c4ba742564ebceeda95be120ea3f58c99
Reviewed-on: https://gerrit.libreoffice.org/28247
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Yousuf Philips <philipz85@hotmail.com>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/extras/source/glade/libreoffice-catalog.xml.in
+++ b/extras/source/glade/libreoffice-catalog.xml.in
@@ -837,5 +837,8 @@
     <glade-widget-class title="Notebookbar ToolBox" name="sfxlo-NotebookbarToolBox"
                         generic-name="Notebookbar ToolBox" parent="GtkToolbar"
                         icon-name="widget-gtk-toolbar"/>
+    <glade-widget-class title="Vertical box hiding childs depending on context" name="sfxlo-ContextVBox"
+                        generic-name="ContextVBox" parent="GtkBox"
+                        icon-name="widget-gtk-box"/>
   </glade-widget-classes>
 </glade-catalog>
