GSoC addedsfxlo-NotebookbarToolBox to the glade catalog
Change-Id: I42baf03695955158b38c912a8a461bc5745daa49

--- a/extras/source/glade/libreoffice-catalog.xml.in
+++ b/extras/source/glade/libreoffice-catalog.xml.in
@@ -834,5 +834,8 @@
     <glade-widget-class title="Big ToolBox" name="sfxlo-BigToolBox"
                         generic-name="Big ToolBox" parent="GtkToolbar"
                         icon-name="widget-gtk-toolbar"/>
+    <glade-widget-class title="Notebookbar ToolBox" name="sfxlo-NotebookbarToolBox"
+                        generic-name="Notebookbar ToolBox" parent="GtkToolbar"
+                        icon-name="widget-gtk-toolbar"/>
   </glade-widget-classes>
 </glade-catalog>
