configure.ac: invert help text semantics for export-validation
Change-Id: I5444c89db7bf46b1894026aa8a2d58ce4d2294df

--- a/configure.ac
+++ b/configure.ac
@@ -2035,10 +2035,9 @@ AC_ARG_WITH(symbol-config,
         [with_symbol_config=no])
 
 AC_ARG_WITH(export-validation,
-    AS_HELP_STRING([--with-export-validation],
-        [If you want the exported files to be validated. Right now limited to OOXML and ODF files.
-         Note: You need executable scripts officeotron and odfvalidator that take the path to the file.
-         See https://cgit.freedesktop.org/libreoffice/contrib/dev-tools/tree/export-validation]),
+    AS_HELP_STRING([--without-export-validation],
+        [Disable validating OOXML and ODF files as exported from in-tree tests.
+         Use this option e.g. if your system only provides Java 5.]),
 ,with_export_validation=yes)
 
 AC_ARG_WITH(bffvalidator,
