Add custom widget entries to glade catalog
Change-Id: I0c51c70adcc81b04695ef07627e751a83c8d2f4d
Reviewed-on: https://gerrit.libreoffice.org/28381
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>

--- a/extras/source/glade/libreoffice-catalog.xml.in
+++ b/extras/source/glade/libreoffice-catalog.xml.in
@@ -711,6 +711,22 @@
                         generic-name="Fill Attr ListBox" parent="GtkComboBox"
                         icon-name="widget-gtk-combobox"/>
 
+    <glade-widget-class title="Page Size ListBox" name="svxcorelo-PaperSizeListBox"
+                        generic-name="Page Size ListBox" parent="GtkComboBox"
+                        icon-name="widget-gtk-combobox"/>
+
+    <glade-widget-class title="Page Numbering ListBox" name="svxcorelo-PageNumberListBox"
+                        generic-name="Page Numbering ListBox" parent="GtkComboBox"
+                        icon-name="widget-gtk-combobox"/>
+
+    <glade-widget-class title="Spacing Preset ListBox" name="svxcorelo-SpacingListBox"
+                        generic-name="Spacing Preset ListBox" parent="GtkComboBox"
+                        icon-name="widget-gtk-combobox"/>
+
+    <glade-widget-class title="Same Content Preset ListBox" name="svxcorelo-SameContentListBox"
+                        generic-name="Same Content Preset ListBox" parent="GtkComboBox"
+                        icon-name="widget-gtk-combobox"/>
+
     <glade-widget-class title="Open Document Button" name="dbulo-OpenDocumentButton"
                         generic-name="Open Document Button" parent="GtkButton"
                         icon-name="widget-gtk-button"/>
