Remove obsolete HAVE_GCC_VISIBILITY_FEATURE check
<https://gcc.gnu.org/bugzilla/show_bug.cgi?id=19664> "libstdc++ headers should
have pop/push of the visibility around the declarations" (aka gcc#22482,
rhbz#162935) is fixed ever since GCC 4.2.

Make this a fatal configure error for now.  The check should be removed
completely after LO 5.3 branch-off.

Change-Id: I3e8fde187b4b20652ee3164485ef868a9bf5a7ce
Reviewed-on: https://gerrit.libreoffice.org/29071
Tested-by: Stephan Bergmann <sbergman@redhat.com>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -6494,9 +6494,7 @@ if test \( "$_os" != "WINNT" -o "$WITH_MINGW" = "yes" \); then
         AC_EGREP_HEADER(visibility push, string, stlvisok=yes, stlvisok=no)
         AC_MSG_RESULT([$stlvisok])
         if test "$stlvisok" = "no"; then
-            AC_MSG_WARN([Your libstdc++ headers are not visibility safe. Disabling visibility])
-            add_warning "Your libstdc++ headers are not visibility safe. Disabling visibility"
-            unset HAVE_GCC_VISIBILITY_FEATURE
+            AC_MSG_ERROR([Your libstdc++ headers are not visibility safe. This is no longer supported.])
         fi
     fi
 
