Remove obsolete HAVE_GCC_VISIBILITY_FEATURE check
<https://gcc.gnu.org/bugzilla/show_bug.cgi?id=26905> "default-visibility class
symbol improperly resolved as hidden-visibility" is fixed ever since GCC 4.2.

Make this a fatal configure error for now.  The check should be removed
completely after LO 5.3 branch-off.

Change-Id: Ie365d5a0e2217a4efd1e8e2642963738ae7d20b1
Reviewed-on: https://gerrit.libreoffice.org/29072
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -6608,9 +6608,7 @@ _ACEOF
 
         AC_MSG_RESULT([$gccvisbroken])
         if test "$gccvisbroken" = "yes"; then
-            AC_MSG_WARN([Your gcc is not -fvisibility=hidden safe. Disabling visibility])
-            add_warning "Your gcc is not -fvisibility=hidden safe. Disabling visibility"
-            unset HAVE_GCC_VISIBILITY_FEATURE
+            AC_MSG_ERROR([Your gcc is not -fvisibility=hidden safe. This is no longer supported.])
         fi
     fi
 
